style.css
@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tilt+Prism&display=swap');

body {
    background-color: #e2e8f0;
    min-height: 100vh;
    font-family: 'Roboto', sans-serif;
    margin: 0;
}

* {
    box-sizing: border-box;
}

.container {
    display: grid;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 1fr 5fr;
    min-height: 100vh;
}
/* Header */

.header {
    display: grid;
    grid-template-rows: 1fr 1.7fr ;
    box-shadow: 0 2px 5px 2px #b2b0b0;
    background-color: white;
    box-sizing: border-box;
}

.header > .top {
    display: grid;
    grid-template-columns: auto 5fr auto auto auto;
    padding: 10px 50px 0 50px;
    gap: 1.5rem;
    place-items: center;
}

.search-bar {
    height: 2rem;
    width: max(80%, 15rem);
    border-radius: 2rem;
    padding: 0.5rem;
    justify-self: stretch;
    border: none;
    background-color: #e2e8f0;
}

.header > .top > .profile-pic {
    background-color: #0ea5e9;
    border-radius: 50%;
    width: 50px;
    height: 50px;
}

.top > .account {
    font-weight: 600;
    font-size: 1.3rem;
}

.top > .account:hover {
    cursor: pointer;
}

.header > .bottom {
    display: grid;
    grid-template-columns: auto 1fr auto auto auto;
    padding: 0 50px 0 50px;
    gap: 2rem;
    align-items: center;
    font-weight: 600;
    font-size: 1.2rem;
}

.bottom > .profile-pic {
    background-color: #0ea5e9;
    border-radius: 50%;
    width: 75px;
    height: 75px;
}

.bottom > button {
    color: white;
    border: none;
    background-color: #0ea5e9;
    height: 2.5rem;
    width: 7rem;
    border-radius: 2rem;
}

.bottom > button:hover {
    cursor: pointer;
    color: #e0e0e0;
    background-color: #0b94c5;
}

.greetings {
    display: grid;
    align-items: center;
}

.greetings > .text {
    font-weight: 600;
}

.greetings > .account {
    font-size: 2rem;
    font-weight: 600;
}

/* Main Section */

.main-section {
    display: grid;
    grid-template-columns: 4fr 1fr;
    padding: 3rem 2rem;
}

.main-section .title {
    font-size: 1.5rem;
    font-weight: 600;
}


.announcements > .items,
.trending > .items{
    background-color: white;
    padding: 1.5rem;
    border-radius: 1rem;
    display: grid;
    gap: 1rem;
    box-shadow: 0 1px 5px 1px #b2b0b0;
    margin: 10px 0 20px 0;
}

.announcements > .items .title {
    font-size: 1rem;
    margin-bottom: 3px;
}

.announcements > .items .text {
    font-size: 0.7rem;
    color: gray;
}

.announcements > .items > div:nth-child(-n + 2) {
    border-bottom: #e2e8f0 solid 2px;
    padding-bottom: 1rem;
}

.trending > .items >  div {
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 1rem;
    align-items: center;
}

.trending > .items .account-info {
    color: gray;
}

.trending > .items .picture {
    background-color: #0ea5e9;
    border-radius: 50%;
    width: 50px;
    height: 50px;
}

.projects .icons {
    display: grid;
    grid-template-columns: 1fr auto auto auto;
    gap: 1rem;
}

.projects > .items {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(auto-fill, max(200px, auto));
    padding: 10px 2rem 2rem 0;
    gap: 1rem;
}

.projects > .items > .item{
    background-color: white;
    border-radius: 10px;
    padding: 1.5rem 3rem 1.5rem 1.5rem;
    display: grid;
    grid-template-rows: auto auto 1fr;
    box-shadow: 0 1px 5px 1px #b2b0b0;
    border-left: solid 8px #fbbf24;
}

.projects > .items .title {
    font-size: 1.3rem;
}

.projects  .text{
    color: gray;
}

.icons {
    margin-top: 2rem;
    place-self: end;
}

.icons > span:hover,
.bell-icon:hover {
    transform: scale(1.3);
    transition-duration: 1s;

}
/* Sidebar */

.sidebar {
    background-color: #0ea5e9;
    grid-row: 1/3;
    display: grid;
    grid-template-rows: 1fr 4fr 6fr;
    color: white;
    font-size: 1.5rem;
    gap: 2rem;
    font-weight: 600;
}

.sidebar > .title {
    font-size: 2rem;
    align-self: center;
    
}

.sidebar > .title,
.navigation > div,
.settings > div {
    display: grid;
    grid-template-columns: 58px 1fr;
    align-items: center;
    padding: 0 1rem 0 1rem;
}

.navigation > div,
.settings > div {
    margin-bottom: 1rem;
}

.navigation > div:hover,
.settings > div:hover {
    cursor: pointer;
    color: #e0e0e0;
}
.sidebar span {
    justify-self: center;
}

/* Icons */

.dashboard-icon {
    background-image: url("img/icons/view-dashboard.svg");
    width: 3rem;
    height: 3rem;
}

.home-icon {
    background-image: url("img/icons/home.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.home-icon {
    background-image: url("img/icons/home.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.profile-icon {
    background-image: url("img/icons/card-account-details.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.message-icon {
    background-image: url("img/icons/message.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.history-icon {
    background-image: url("img/icons/history.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.task-icon {
    background-image: url("img/icons/calendar-check.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.community-icon {
    background-image: url("img/icons/account-group.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.settings-icon {
    background-image: url("img/icons/cog.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.support-icon {
    background-image: url("img/icons/face-agent.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.privacy-icon {
    background-image: url("img/icons/shield-check.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.bell-icon {
    background-image: url("img/icons/bell-ring-outline.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.search-icon {
    background-image: url("img/icons/magnify.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.share-icon {
    background-image: url("img/icons/share-variant-outline.svg");
    width: 1.5rem;
    height: 1.5rem;
}

.fav-icon {
    background-image: url("img/icons/star-outline.svg");
    width: 1.5rem;
    height: 1.5rem;
    grid-column: 2/3;
}

.view-icon {
    background-image: url("img/icons/eye-outline.svg");
    width: 1.5rem;
    height: 1.5rem;
}

